# series_wheel_legged-robot

./: README.md
series_wheel_legged_robot_ws/install/: local_setup.sh  setup.sh
series_wheel_legged_robot_ws/install/lqr_effort_controller/include/lqr_effort_controller/: lqr_effort_controller_parameters.hpp  validate_lqr_effort_controller_parameters.hpp
series_wheel_legged_robot_ws/install/lqr_effort_controller/include/lqr_effort_controller/lqr_effort_controller/: lqr_effort_controller.hpp  visibility_control.h
series_wheel_legged_robot_ws/install/lqr_effort_controller/share/lqr_effort_controller/: local_setup.dsv  local_setup.sh  lqr_effort_controller.xml  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
series_wheel_legged_robot_ws/install/lqr_effort_controller/share/lqr_effort_controller/cmake/: ament_cmake_export_include_directories-extras.cmake  lqr_effort_controllerConfig.cmake
series_wheel_legged_robot_ws/install/robot_description_pkg/share/robot_description_pkg/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
series_wheel_legged_robot_ws/install/robot_description_pkg/share/robot_description_pkg/config/: rviz2_default_config.rviz  series_wheel_legged_robot_ros2_control.yaml
series_wheel_legged_robot_ws/install/robot_description_pkg/share/robot_description_pkg/launch/: robot_display.launch.py
series_wheel_legged_robot_ws/install/robot_description_pkg/share/robot_description_pkg/plugins/: gazebo_sensor_imu.xacro
series_wheel_legged_robot_ws/log/: latest_build
series_wheel_legged_robot_ws/lqr_effort_controller/: CMakeLists.txt
series_wheel_legged_robot_ws/lqr_effort_controller/include/lqr_effort_controller/: lqr_effort_controller.hpp
series_wheel_legged_robot_ws/lqr_effort_controller/src/: lqr_effort_controller.cpp  lqr_effort_controller.yaml
series_wheel_legged_robot_ws/robot_description_pkg/: CMakeLists.txt
series_wheel_legged_robot_ws/robot_description_pkg/config/: series_wheel_legged_robot_ros2_control.yaml
series_wheel_legged_robot_ws/robot_description_pkg/launch/: robot_display.launch.py
series_wheel_legged_robot_ws/robot_description_pkg/urdf/: base_link.urdf.xacro  common_inertia.xacro  leg_link.urdf.xacro  series_wheel_legged_robot.urdf.xacro
(+7 files in other folders)
